--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -47,5 +47,5 @@ ul li a::before {
 
 ul li a:hover::before {
     width: 100%;
-    filter: drop-shadow(0 0 px var(--clr));
+    filter: drop-shadow(0 0 5px var(--clr));
 }
