--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -85,8 +85,9 @@ margin-top:30px;
 
 .vertical-center{
 margin: 0;
+display: flex;
   align-items: center;
-  position: absolute;
+  justify-content: center;
   bottom: 0;
 }
 
