--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,7 +14,7 @@
     background-color: #14191E;
     margin: auto;
     justify-content: center;
-    padding: 70px 0;
+    padding: 70px;
 }
 
 .row{
