--- a/src/pages/Recruitment/Recruitment.css
+++ b/src/pages/Recruitment/Recruitment.css
@@ -1,8 +1,8 @@
-*{
+* {
     font-family: 'Poppins', sans-serif;
 }
 
-.introduction-container{
+.introduction-container {
     margin-top: 20px;
     height: fit-content;
     display: flex;
@@ -11,14 +11,14 @@
     justify-content: center;
 }
 
-.introduction-container h1{
+.introduction-container h1 {
     color: #ffffff;
     padding: 10px;
     font-size: 3em;
     font-family: calibri;
 }
 
-.button-container{
+.button-container {
     padding: 20px;
     display: flex;
     flex-direction: row;
@@ -27,7 +27,7 @@
     text-align: center;
 }
 
-.button-discord{
+.button-discord {
     width: 200px;
     height: 70px;
     color: white;
@@ -45,13 +45,13 @@
     margin: 0 20px 0 20px;
 }
 
-.button-discord:hover{
+.button-discord:hover {
     box-shadow: inset 200px 0 0 0 #f9e506;
     color: #000000;
     border-radius: 5px;
 }
 
-.button-Recrutements{
+.button-faction {
     border: none;
     width: 200px;
     height: 70px;
@@ -68,94 +68,66 @@
     margin: 0 20px 0 20px;
 }
 
-.button-Recrutements:hover{
+.button-faction:hover {
     box-shadow: inset 200px 0 0 0 #f9e506;
     color: #000000;
     border-radius: 5px;
 }
 
 @media screen and (max-width: 460px) {
-    .button-container{
+    .button-container {
         flex-direction: column;
         padding: 0;
     }
 
     .button-discord,
-    .button-Recrutements{
+    .button-faction {
         width: 150px;
         height: 60px;
         font-size: 1.5em;
     }
-    .button-Recrutements{
+
+    .button-faction {
         margin: 20px 0 20px 0;
     }
 }
 
-.category-container{
+.form-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-color: #14191E;
+    height: 1000px;
 }
 
-.category-title-container{
-    padding: 20px;
-    font-family: calibri;
-    text-align: left;
-    font-weight: bold;
-}
-
-.category-title-container h1{
+.form-container iframe {
     color: #ffffff;
-    font-size: 2em;
 }
 
-.category-title-container p{
+.form-container p{
     color: #868484;
-    font-size: 1.3em;
+    font-size: 1em;
+    font-family: calibri;
+    padding-top: 10px;
+    text-align: center;
 }
 
-.card-container{
-  height: 500px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
+.background-form-color {
+
+    margin: auto;
+    max-width: 90vw;
+    width: 640px;
+    height: 1000px;
+    background-color: #ffffff;
+
+    padding-bottom: 0;
+    border-radius: 6px;
+    margin-bottom: 6px;
+
 }
 
-.card-relation-container{
-    height: 300px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-
-.swiper{
-  width: 100%;
-  height: 100%;
+@media (max-width: 750px) {
+    .background-form-color{
+        width: 98%;
+    }
 }
-
-.swiper-relation{
-    width: 100%;
-    height: 100%;
-}
-
-.swiper-slide{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.swiper-pagination-bullet{
-    background: #ffffff!important;
-}
-
-.swiper-button-prev{
-    color: #ffffff!important;
-}
-
-.swiper-button-next{
-    color: #ffffff!important;
-}
-
