--- a/src/pages/Faq/Faq.css
+++ b/src/pages/Faq/Faq.css
@@ -117,3 +117,98 @@
 .autocom-box li:hover{
     background: #efefef;
 }
+
+.card-faq-container{
+    height: 460px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.swiper-faq{
+    width: 100%;
+    height: 100%;
+}
+
+.category-faq-card{
+    width: 300px;
+    height: 400px;
+    border-radius: 10px;
+    overflow: hidden;
+    position: absolute;
+    transition: 0.4s ease;
+    cursor: pointer;
+}
+
+.category-faq-card:hover{
+    transform: translateY(-15px);
+}
+
+.category-faq-img-card{
+    height: 350px;
+}
+
+.category-faq-img-card img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-sizing: border-box;
+}
+
+.details-faq-card{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10px;
+    box-sizing: border-box;
+    font-family: calibri;
+    background-color: #ffffff;
+}
+
+.information-faq-category-card{
+    display: flex;
+    flex-direction: column;
+}
+
+.information-faq-category-card p{
+    color:#222222;
+    margin: 5px 0;
+    padding-bottom: 5px;
+    font-weight: bold;
+    letter-spacing: 0.5px;
+    padding-right: 8px;
+    font-size: 20px;
+}
+
+.information-faq-category-card p::after{
+    content: "";
+    position: absolute;
+    margin-top: 22px;
+    left: 10px;
+    height: 4px;
+    width: 50px;
+    border-radius: 3px;
+    background-color: #2ecc71;
+}
+
+.information-faq-category-card span{
+    color:#7e7d7d;
+    font-size: 0.8em;
+    text-align: left;
+}
+
+@media screen and (max-width: 300px) {
+    .category-faq-card{
+        width: 250px;
+    }
+}
+
+@media screen and (max-width: 255px) {
+    .category-faq-card{
+        width: 200px;
+    }
+}
