Final push with bug

--- a/src/pages/Faction/Faction.css
+++ b/src/pages/Faction/Faction.css
@@ -148,14 +148,14 @@
 }
 
 .swiper-pagination-bullet{
-    background: #ffffff!important;
+    background: #868484!important;
 }
 
 .swiper-button-prev{
-    color: #ffffff!important;
+    color: #868484!important;
 }
 
 .swiper-button-next{
-    color: #ffffff!important;
+    color: #868484!important;
 }
 
