--- a/src/components/Modal/ModalCardAchievement/ModalCardAchievement.css
+++ b/src/components/Modal/ModalCardAchievement/ModalCardAchievement.css
@@ -31,9 +31,16 @@
 }
 
 .achievement-picture-card img{
-    width: 400px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     box-sizing: border-box;
     transition: all 0.4s ease;
+}
+
+@media screen and (max-width: 420px) {
+    .achievement-picture-card-container{
+        width: 75%;
+        height: 50%;
+    }
 }
